--- a/Tomogram_CNN_auto_focus.ipynb
+++ b/Tomogram_CNN_auto_focus.ipynb
@@ -854,7 +854,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('hello')"
+   ]
   }
  ],
  "metadata": {
